--- a/apps/client/src/assets/locales/en/intro.json
+++ b/apps/client/src/assets/locales/en/intro.json
@@ -1,4 +1,9 @@
 {
   "Something-went-wrong": "Something went wrong:",
-  "Try-again": "Try again"
+  "Try-again": "Try again",
+  "Welcome": "Welcome!",
+  "the-purpose-of-this-web-application": "The purpose of this web application is to highlight my experience as a web developer and to share some of the things I have learned over the years.",
+  "the-complete-code-can-be-found": "The complete code for this site can be found at ",
+  "The-following-are-a-list-of-tools": "The following are a list of tools, libraries, software, etc... I have used to build this site:",
+  "if-you-find-this-site-useful": "If you find this site useful and you want to make a request for future features or work, feel free to submit a request on "
 }
