--- a/apps/client/src/assets/locales/es/intro.json
+++ b/apps/client/src/assets/locales/es/intro.json
@@ -1,7 +1,7 @@
 {
   "Something-went-wrong": "Algo salió mal:",
   "Try-again": "Inténtalo de Nuevo",
-  "Welcome": "¡Bienvenidos!",
+  "Welcome": "¡Bienvenidos{{userName}}!",
   "the-purpose-of-this-web-application": "El propósito de esta aplicación web es resaltar mi experiencia como desarrollador web y compartir algunas de las cosas que he aprendido a lo largo de los años.",
   "the-complete-code-can-be-found": "El código completo de este sitio se puede encontrar en ",
   "The-following-are-a-list-of-tools": "La siguiente es una lista de herramientas, bibliotecas, software, etc... que he usado para construir este sitio:",
