Add react-router and create separate pages

--- a/apps/client/src/assets/locales/es/intro.json
+++ b/apps/client/src/assets/locales/es/intro.json
@@ -6,5 +6,6 @@
   "the-complete-code-can-be-found": "El código completo de este sitio se puede encontrar en ",
   "The-following-are-a-list-of-tools": "La siguiente es una lista de herramientas, bibliotecas, software, etc... que he usado para construir este sitio:",
   "if-you-find-this-site-useful": "Si encuentra útil este sitio y desea realizar una solicitud de funciones o trabajos futuros, no dude en enviar una solicitud en ",
-  "the-shared-components-can-be-found-in": "Muchos de los componentes compartidos se pueden encontrar en mi instancia de "
+  "the-shared-components-can-be-found-in": "Muchos de los componentes compartidos se pueden encontrar en mi instancia de ",
+  "coming-soon": "¡Próximamente, en breve, pronto!"
 }
