--- a/apps/client/src/assets/locales/en/intro.json
+++ b/apps/client/src/assets/locales/en/intro.json
@@ -6,5 +6,6 @@
   "the-complete-code-can-be-found": "The complete code for this site can be found at ",
   "The-following-are-a-list-of-tools": "The following are a list of tools, libraries, software, etc... I have used to build this site:",
   "if-you-find-this-site-useful": "If you find this site useful and you want to make a request for future features or work, feel free to submit a request on ",
-  "the-shared-components-can-be-found-in": "Many of the shared components can be found in my instance of "
+  "the-shared-components-can-be-found-in": "Many of the shared components can be found in my instance of ",
+  "coming-soon": "Coming Soon!"
 }
