--- a/apps/client/src/assets/locales/es/intro.json
+++ b/apps/client/src/assets/locales/es/intro.json
@@ -7,5 +7,5 @@
   "The-following-are-a-list-of-tools": "La siguiente es una lista de herramientas, bibliotecas, software, etc... que he usado para construir este sitio:",
   "if-you-find-this-site-useful": "Si encuentra útil este sitio y desea realizar una solicitud de funciones o trabajos futuros, no dude en enviar una solicitud en ",
   "the-shared-components-can-be-found-in": "Muchos de los componentes compartidos se pueden encontrar en mi instancia de ",
-  "coming-soon": "¡Próximamente, en breve, pronto!"
+  "coming-soon": "¡En breve!"
 }
