--- a/apps/client/src/assets/locales/en/sub-nav.json
+++ b/apps/client/src/assets/locales/en/sub-nav.json
@@ -3,5 +3,5 @@
   "featured-components": "Featured Components",
   "sign-in": "Sign In",
   "sign-out": "Sign Out",
-  "languages": "languages"
+  "languages": "Languages"
 }
